Fixed pagination layout issues

--- a/client/src/components/Pagination.css
+++ b/client/src/components/Pagination.css
@@ -1,5 +1,4 @@
 .pagination {
-    width: 100%;
     margin: 20px;
     display: flex;
 }
